# Berry4D

./: .gitignore  CMakeLists.txt  README.md  cube.be4d  lines.py  link.be4d  main.cpp  ring.be4d  spaceShip.be4d  test.txt
doc/: be4d.md
include/: be4dLoader.h  camera.h  core.h  cube.h  light.h  object.h  scene.h  timestamp.h  vec.h
src/: be4dLoader.cpp  camera.cpp  core.cpp  cube.cpp  light.cpp  object.cpp  scene.cpp  vec.cpp
